# pastebin-server

./: .gitignore  Cargo.toml  README.md  askama.toml
public/: index.html
public/templates/: error.html  input.html  result.html
src/: main.rs
src/builder/: mod.rs  redis_client.rs
src/utils/: kt_std.rs  mod.rs
