[package]
name = "pastebin-server"
version = "0.1.0"
authors = ["hzqd <hzqdfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-session = "0.3.0"
serde = "1.0.104"
redis = "0.15.1"