[package]
name = "pastebin-server"
version = "0.1.0"
authors = ["hzqd <hzqdfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-session = "0.3.0"
actix-files = "0.2.1"
serde = "1.0.104"
redis = "0.15.1"
lazy_static = "1.4.0"
rand = "0.7.3"