[package]
name = "pastebin-server"
version = "0.1.0"
authors = ["hzqd <hzqdfs@gmail.com>", "moeKiwiSAMA <me@kiwi.cat>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
serde = "1.0.104"
actix-web = "2"
actix-rt = "1"
actix-session = "0.3.0"
actix-files = "0.2.1"
askama = "0.9.0"
redis = "0.15.1"

